--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     <a class="nav-link" href="#aboutus">o nas</a>
                     <!-- <a class="nav-link" href="#portfolio">Odbyte podróże</a> -->
                     <a class="nav-link" href="#prices">ceny</a>
-                    <a class="nav-link" href="#team">Polcenia</a>
+                    <a class="nav-link" href="#team">Polecenia</a>
                     <a class="nav-link" href="#achievements">osiągnięcia</a>
                     <a class="nav-link" href="#contact">kontakt</a>
                 </div>
@@ -205,7 +205,7 @@
                     </div>
                     <div class="col-md-6 col-xl-4">
                         <div class="price-box">
-                            <p class="price-title">Wakacje na tropkach</p>
+                            <p class="price-title">Wakacje na tropikach</p>
                             <hr>
                             <p><span>Kierunek: </span>Egzotyczne wyspy (np. Malediwy, Bali)</p>
                             <p><span>Długość:</span>  7 dni</p>
